# cruet

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
src/case/: camel.rs  class.rs  kebab.rs  mod.rs  pascal.rs  screaming_snake.rs  sentence.rs  snake.rs  table.rs  title.rs  train.rs
src/cases/: camel.rs  class.rs  kebab.rs  mod.rs  pascal.rs  screaming_snake.rs  sentence.rs  snake.rs  table.rs  title.rs  train.rs
src/number/: deordinalize.rs  mod.rs  ordinalize.rs
src/numbers/: mod.rs
src/numbers/deordinalize/: mod.rs
src/numbers/ordinalize/: mod.rs
src/string/: deconstantize.rs  demodulize.rs  mod.rs  pluralize.rs  singularize.rs
src/string/deconstantize/: mod.rs
src/string/demodulize/: mod.rs
src/string/pluralize/: mod.rs
src/string/singularize/: mod.rs
src/suffix/: foreign_key.rs  mod.rs
src/suffix/foreignkey/: mod.rs
tests/: lib.rs
